<resources>
    <string name="app_name">PhoneBook</string>
    <string name="refresh">Refresh</string>
    <string name="export_local">Export Local</string>
    <string name="phone_title">Phone List</string>
    <string name="zh_cn_phone_title">联系人</string>
    <string name="phone_detail_title">联系人详情</string>
    <string name="phone_add_title">新建联系人</string>
    <string name="phone_update_title">编辑联系人</string>
    <string name="phone_name">称呼</string>
    <string name="phone">手机</string>
    <string name="upload_portrait">上传头像</string>
    <string name="loading">Loading...</string>
    <string name="add">添加</string>
    <string name="finish">完成</string>
    <string name="edit">编辑</string>
    <string name="cancel">取消</string>
    <string name="return_string">返回</string>
</resources>
